--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "wargaming-pow-generator",
   "private": true,
   "main": "./src/Server.js",
+  "bin": "./src/Server.js",
   "scripts": {
     "start": "node ./src/Server.js",
-    "build": ""
+    "build": "pkg . -t node10-win-x86,node10-linux,node10-macos"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "pkg": "^4.4.9",
     "sha3": "^2.1.3"
   }
 }
